2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Update version number to 1.3.1.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl:
	* README.tclblend: Update to mention that scripts
	need to be installed before running and that
	Tcl 8.4.4 is the min 8.4 version that Tcl Blend
	can be used with.

2003-07-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): If linking
	with the jvm.lib from the JDK fails, link
	with our own import lib for jvm.dll.
	* win/libjvm.dll.a: Add import lib created
	using instructions from the following URL:
	http://www.inonit.com/cygwin/jni/invocationApi/archive.html

2003-05-30  Kenneth H. Cox  <tclunit@attbi.com>

	* src/native/javaInterp.c (BTestCmd): Change
	C++ style comment to C style comment.

2003-04-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.tclblend: Update min version of the
	Tcl Thread package to 2.5.2. This avoids
	a configure bug in the 2.5.1 release that
	shows up when building in the srcdir.

2003-03-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/JavaDefineClassCmd.java (cmdProc):
	Convert each char to a byte instead of calling
	String.getBytes() which returns bytes in the
	platform's default encoding.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	Add tcljava-130-2003-03-17 tag to mark the
	1.3.0 release.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tcl/get.test: Fix syntax error and
	add knownbug constraint to test that fails.
	* tests/tcljava/FuncSig.test: Comment out
	test case that depends on a feature in the
	source that was disabled.
	* tests/tcljava/JavaDefineClassCmd.test:
	Use binary translation when reading .class
	files for both Jacl and Tcl Blend. This is
	needed to fix a failing test in Jacl, as
	a result of the recent IO upgrade.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>
