@@ -14,7 +14,7 @@
 
 # Specify which system to build.  (either jacl or tclblend)
 TCLJAVA		= tclblend
-TCLJAVA_VERSION	= 1.3.0
+TCLJAVA_VERSION	= 1.3.1
 
 # Location you will be installing into
 TCL_DIR		= D:\Tcl
